# Euphorie

./: .env  .gitignore  Dockerfile  README.md  assets.config.json  capacitor.config.json  chat_initial_data.json  db.sqlite3  deploy.sh  integration_plan.txt  manage.py  package-lock.json  package.json  privacy.md  pubspec.yaml  requirements.txt  site.webmanifest
ai-service/: main.py  requirements.txt  test_smolvlm.py
ai-service/agents/: base_agent.py  jarvis_agent.py
ai-service/llm/: prompt_templates.py
ai-service/models/: agent.py  vision.py
ai-service/utils/: image_processing.py
ai-service/vision/: euphorie_vision.py  euphorie_vision.py.backup  requirements.txt  scene_interpreter.py
android/: capacitor.settings.gradle  gradle.properties
android/app/: build.gradle  build.gradle.kts  capacitor.build.gradle
backend/: .env  admin.py  auth_views.py  cargo.toml  config.toml  db.sqlite3  gemini_service.py  manage.py  models.py  nexus_views.py  requirements.txt  settings.py  urls.py  views.py
backend/chat/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_friendship_friendsuggestion_message_messagereport_and_more.py
backend/chat/recs/: __init__.py  embedding_utils.py  ranker.py  recommender.py  recommender_lite.py  vector_search.py
backend/euphorie_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/management/commands/: seed_packs.py
backend/migrations/: 0001_initial.py  0002_alter_usercredits_balance_procurementrun.py
backend/mobile/: urls.py  views.py
backend/rooms/: views.py
backend/src/: main.rs
backend/src/handlers/: websocket.rs
chat/: adapters.py  admin_views.py  api_views.py  chat_extras.py  consumers.py  models.py  routing.py  services.py  urls.py  user_services.py  views.py
chat/migrations/: 0004_message_media.py  0005_reaction.py  0006_category_room_category_meetup.py  0007_alter_category_options_alter_meetup_options_and_more.py  0008_usersettings_room_is_dm_room_is_protected_and_more.py  0009_userprofile_profile_picture_data.py
chat/static/: chat.js
chat/templatetags/: chat_extras.py
euphorie-mobile/: capacitor.config.js  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
euphorie-mobile/src/: main.js
euphorie_flutter/: README.md  pubspec.yaml
euphorie_flutter/lib/: main.dart
euphorie_flutter/linux/: CMakeLists.txt
euphorie_flutter/macos/: Podfile
euphorie_flutter/web/: index.html
frontend/: capacitor.config.json  cert.pem  index Jarvis Look.html  index copy.html  index.html  index.html.backup2  index.html.old  key.pem  llms-full.txt  llms.txt  manifest.json  package-lock.json  package.json  privacy.html  robots.txt  sitemap.xml  support.html  terms.html  tsconfig.json
ios/App/: Podfile
ios/Runner/: GoogleService-Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/runner/: my_application.cc
load-tests/: package.json
load-tests/configs/: django-websocket-test.yml  load-test.yml  websocket-test.yml
macos/Runner.xcodeproj/: project.pbxproj
management/commands/: update_profile_pictures.py
mysite/: asgi.py  settings.py  urls.py
scripts/: build.sh  run-dev.sh
scripts/dev/: setup.sh  start-local.sh  stop-local.sh
staticfiles/js/: chat.js  chatroom.js
test/: widget_test.dart
web/: manifest.json
websocket-server/: Cargo.toml  setup.sh  test-client.html
websocket-server/src/: config.rs  connection.rs  lib.rs  main.rs  message.rs  message_history.rs  metrics.rs  pool.rs  rate_limiter.rs  room.rs  screen_sharing.rs  server.rs  user.rs
websocket-server/src/handers/: screen_sharing.rs
windows/: CMakeLists.txt
www/: capacitor-init.js  index.html
(+181 files in other folders)
