[package]
name = "euphorie-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }  # ADDED: Missing chrono dependency
clap = { version = "4.0", features = ["derive"] }